documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

L43W32API BOOL __stdcall L43_ChStop(INT channum,HCARD handleval);

L43W32API ULONG __stdcall L43_CmdAddr(SCHNDX index,INT channum,HCARD handleval);

L43W32API ULONG __stdcall L43_CmdAlloc(INT count,HCARD handleval);

L43W32API ULONG __stdcall L43_CmdAllocEx(ULONG configval,INT count,HCARD handleval);

L43W32API ULONG __stdcall L43_CmdBaseRd(INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_CmdBaseWr(ULONG addrval,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CmdClear(INT channum,HCARD handleval);

L43W32API USHORT __stdcall L43_CmdCountRd(INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_CmdCountWr(USHORT countval,INT channum,HCARD handleval);

L43W32API USHORT __stdcall L43_CmdCtrlRd(SCHNDX index,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_CmdCtrlWr(USHORT ctrlval,SCHNDX index,INT channum,HCARD handleval);

L43W32API USHORT __stdcall L43_CmdCurrRd(INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_CmdCurrWr(USHORT addrval,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_CmdInit(USHORT opcode,LPUSHORT block);

L43W32API SCHNDX __stdcall L43_CmdInsert(LPUSHORT block,INT channum,HCARD handleval);

L43W32API USHORT __stdcall L43_CmdMaxRd(INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_CmdMaxWr(USHORT count,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CmdRd(LPUSHORT block,ULONG addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CmdShotWr(BOOL value,SCHNDX index,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CmdSkipWr(BOOL value,SCHNDX index,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_CmdStackClr(INT channum,HCARD handleval);

L43W32API USHORT __stdcall L43_CmdStartRd(INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_CmdStartWr(USHORT addrval,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CmdStepWr(BOOL value,SCHNDX index,INT channum,HCARD handleval);

L43W32API INT __stdcall L43_CmdTotalRd(INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_CmdTotalWr(INT countval,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CmdWr(LPUSHORT block,ULONG addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CommCall(ULONG addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CommCheck(HCARD handleval);

L43W32API ERRVAL __stdcall L43_CommDisable(USHORT command,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CommDisableEx(USHORT command,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CommEnable(HCARD handleval);

L43W32API ULONG __stdcall L43_CommRdL(ULONG addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CommRdsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);

L43W32API USHORT __stdcall L43_CommRdW(ULONG addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CommRun(LPUSHORT dataptr,USHORT datacount,LPUSHORT codeptr,USHORT codecount,HCARD handleval);

L43W32API VOID __stdcall L43_CommWrL(ULONG value,ULONG addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CommWrsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);

L43W32API VOID __stdcall L43_CommWrW(USHORT value,ULONG addrval,HCARD handleval);

L43W32API ULONG __stdcall L43_ConvFromArinc(ULONG msgval);

L43W32API ULONG __stdcall L43_ConvToArinc(ULONG msgval);

L43W32API VOID __stdcall L43_DARClr(USHORT maskval,USHORT addrval,HCARD handleval);

L43W32API BOOL __stdcall L43_DARGet(USHORT maskval,USHORT addrval,HCARD handleval);

L43W32API ULONG __stdcall L43_DARRdL(USHORT addrval,HCARD handleval);

L43W32API USHORT __stdcall L43_DARRdW(USHORT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DARSet(USHORT maskval,USHORT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DARWrL(ULONG value,USHORT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DARWrW(USHORT value,USHORT addrval,HCARD handleval);

L43W32API ULONG __stdcall L43_Div(ULONG diva,ULONG divb);

L43W32API INT __stdcall L43_DllUsageCount(VOID);

L43W32API USHORT __stdcall L43_DPMMRdW(ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMMWrW(USHORT value,ULONG addrval,HCARD handleval);

L43W32API USHORT __stdcall L43_DPMRdB(ULONG addrval,HCARD handleval);

L43W32API ULONG __stdcall L43_DPMRdL(ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API USHORT __stdcall L43_DPMRdW(ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMWrB(USHORT value,ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMWrL(ULONG value,ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMWrW(USHORT value,ULONG addrval,HCARD handleval);

L43W32API USHORT __stdcall L43_DspBioRd(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspHmClear(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspHmSet(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspIntfClear(HCARD handleval);

L43W32API BOOL __stdcall L43_DspIntfRead(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspIntmClear(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspIntmSet(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspXfClear(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspXfSet(HCARD handleval);

L43W32API LPCSTR __stdcall L43_ErrDesc(INT errval);

L43W32API LPCSTR __stdcall L43_ErrDescStr(INT errval);

L43W32API LPCSTR __stdcall L43_ErrName(INT errval);

L43W32API VOID __stdcall L43_ExpandMant(LPULONG mant,LPINT exp);

L43W32API VOID __stdcall L43_ExtDIODirSet(INT dionum,BOOL dirval,HCARD handleval);

L43W32API BOOL __stdcall L43_ExtLEDWINRd(HCARD handleval);

L43W32API VOID __stdcall L43_ExtLEDWINWr(BOOL ledval,HCARD handleval);

L43W32API VOID __stdcall L43_FileClose(LPVOID handle);

L43W32API BOOL __stdcall L43_FileErr(VOID);

L43W32API VOID __stdcall L43_FileErrClr(VOID);

L43W32API VOID __stdcall L43_FileErrSet(VOID);

L43W32API LPVOID __stdcall L43_FileOpenRead(LPCSTR filename);